Fixes as per feedback for namespacing of class

--- a/addon/styles/app.css
+++ b/addon/styles/app.css
@@ -47,7 +47,7 @@
 	border-bottom-width: 0;
 }
 
-.cell-clickable {
+.llama-body-cell.is-clickable {
 	cursor: pointer;
 }
 
